--- a/ru.html
+++ b/ru.html
@@ -16,9 +16,6 @@
  <header>
      <img src="помпа" alt="" width="100">
      <nav>
-        <a href="https://www.epicgames.com/fortnite/ru/download">сколько урона даёт помпа<a>
-        <a href="https://www.amazon.it/Fortnite-Blaster-lancia-dardi-retroricarica-adolescenti/dp/B08GCWT8K9">купить помпу<a>
-            <a href="https://www.youtube.com/channel/UCZxdCeY7FOTPWwhVwqc1lGw">ютуб абобуса</a>
      </nav>
      <button>
         <a href=http://127.0.0.1:5500/com.html>тепеперь нужен нажми</a>
@@ -36,3 +33,5 @@
  </footer>
 </body>
 </html>
+
+<a href="https://nerf.by/nerf-fortnite-ar-l">купить скарчик</a>
