--- a/aboba.html
+++ b/aboba.html
@@ -4,27 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chipseki</title>
+    <title>snikers</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com">
+<link href="link rel="preconnect href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap">
 </head>
 <body>
  <header>
-     <img src="помпа" alt="" width="100">
+     
      <nav>
-        <a href="index.html">переход к помпе:> </a>
-        <a href="aboba.html">переход на скар</a>
      </nav>
+     <button>
+        <a href=http://127.0.0.1:5500/com.html>тепеперь нужен нажми</a>
+        </button>
+
  </header>
  <main>
+     <div>     
+     </div>
  </main>
  <footer>
-    <p>&copy;2021 авторские права мои и всё.Мой ютуб:чипсекин:) "https://www.youtube.com/channel/UCZxdCeY7FOTPWwhVwqc1lGw"если что скопируйте</p>
+    <p>&copy;2021 авторские права мои и всё.Мой ютуб:чипсекин:)</p>
  </footer>
 </body>
 </html>
+<header>
+    <img srk=crfh.webp width="200">
+</header>
+
+
 
