--- a/index.html
+++ b/index.html
@@ -14,21 +14,20 @@
 </head>
 <body>
  <header>
-     <img src="помпа" alt="" width="100">
+     <img src="помпа" alt="" width="200">
      <nav>
         <a href="https://www.epicgames.com/fortnite/ru/download">сколько урона даёт помпа<a>
         <a href="https://www.amazon.it/Fortnite-Blaster-lancia-dardi-retroricarica-adolescenti/dp/B08GCWT8K9">купить помпу<a>
             <a href="https://www.youtube.com/channel/UCZxdCeY7FOTPWwhVwqc1lGw">ютуб абобуса</a>
      </nav>
      <button>
-        <a href=http://127.0.0.1:5500/com.html>тепеперь нужен нажми</a>
+        <a href=com.html>тепеперь нужен нажми</a>
         </button>
-
  </header>
  <main>
      <div>
-         <h1>кто это зделал</h1>
-         <p>это зделал я с целью того что бы эпики зделали урон от помпы намного круче и больше а то помпа вообще не топ с таким уроном я за хороший урон от помпы кто тоже тот топчик и можете там сверху узнать урон и купить помпу ыы кстати этот сайт потребовал нормально так услилий поэтому это амогус </p>
+         <h1>кто это cделал</h1>
+         <p>Это cделал я с целью того что бы эпики зделали урон от помпы намного больше а то помпа вообще не топ с таким уроном я за хороший урон от помпы кто тоже тот топчик и можете там сверху узнать урон и купить помпу ыы кстати этот сайт потребовал нормально так услилий поэтому это амогус </p>
      </div>
  </main>
  <footer>
