--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
  <header>
-     <img src="помпа" alt="" width="200">
+     <img src="помпа" width="200">
      <nav>
         <a href="https://www.epicgames.com/fortnite/ru/download">сколько урона даёт помпа<a>
         <a href="https://www.amazon.it/Fortnite-Blaster-lancia-dardi-retroricarica-adolescenti/dp/B08GCWT8K9">купить помпу<a>
