--- a/com.html
+++ b/com.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>chipseki</title>
+    <title>нарния</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,12 +18,13 @@
      <nav>
         <a href="index.html">переход к помпе:> </a>
         <a href="aboba.html">переход на скар</a>
+    
      </nav>
  </header>
  <main>
  </main>
  <footer>
-    <p>&copy;2021 авторские права мои и всё.Мой ютуб:чипсекин:) "https://www.youtube.com/channel/UCZxdCeY7FOTPWwhVwqc1lGw"если что скопируйте</p>
+    <p>&copy;2021</p>
  </footer>
 </body>
 </html>
