--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>snikers</title>
+    <title>помпус</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,12 +21,12 @@
             <a href="https://www.youtube.com/channel/UCZxdCeY7FOTPWwhVwqc1lGw">ютуб абобуса</a>
      </nav>
      <button>
-        <a href=com.html>тепеперь нужен нажми</a>
+        <a href=com.html>нажми и попади в нарнию</a>
         </button>
  </header>
  <main>
      <div>
-         <h1>кто это cделал</h1>
+         <h1>...</h1>
          <p>Это cделал я с целью того что бы эпики зделали урон от помпы намного больше а то помпа вообще не топ с таким уроном я за хороший урон от помпы кто тоже тот топчик и можете там сверху узнать урон и купить помпу ыы кстати этот сайт потребовал нормально так услилий поэтому это амогус </p>
      </div>
  </main>
